Try frontend connection